--- a/src/Squawkings/Content/Site.less
+++ b/src/Squawkings/Content/Site.less
@@ -37,11 +37,14 @@
   -o-border-radius: @radiusin;
   border-radius: @radiusin;
 }
+a:link {color:#FFFFFF;}      /* unvisited link */
+a:visited {color:#FFFFFF;}  /* visited link */
+a:hover {color:#F7C600;}  /* mouse over link */
+a:active {color:#FFFFFF;}  /* selected link */ 
 .link-text {
 	font-size: @dfltfontsize;
 	text-align:right;
 	padding-right: 20px;
-	color:white;
 }
 .displaynone {
 	display: none;
