--- a/src/Squawkings/Views/Logon/Index.cshtml
+++ b/src/Squawkings/Views/Logon/Index.cshtml
@@ -9,7 +9,7 @@
     @using ( Html.Form<LogonInputModel>("index")) {
 
         @Html.AntiForgeryToken("AntiForgeryTokenSalt")
-        @Html.Input(x=>x.ReturnUrl).Hide()
+        @Html.Input(x=>x.ReturnUrl)
         <div id="logon-dialog">
             @Html.Input(x=>x.UserName).AddClass("logon-input-userid").Attr("title","Please enter a User Name").Attr("maxlength","50").Attr("placeholder","username")
             @Html.Input(x=>x.PassWord).AddClass("logon-input-password").Attr("title","Please enter a Password").Attr("maxlength","50").Attr("placeholder","password")
