--- a/src/Squawkings/Views/Shared/_sqauwks.cshtml
+++ b/src/Squawkings/Views/Shared/_sqauwks.cshtml
@@ -4,8 +4,8 @@
 {
     <div class="squawk-item">
         <div class="squawk-item-image">
-            <a href="@Url.Action("Index")">
-                <img src="@Url.Content( "~/Content/Images/"+item.AvatarUrl)" alt="View" />
+            <a href="/@item.Username">
+                <img src="../../Content/Images/@item.AvatarUrl" alt="View" />
             </a>
         </div>
         <div class="squawk-item-inner">
