--- a/src/Squawkings/Views/Shared/_Layout.cshtml
+++ b/src/Squawkings/Views/Shared/_Layout.cshtml
@@ -14,14 +14,7 @@
 </head>
 
 <body>
-    <div id="logon-banner">
-        <div class="link-text"  style="font-size: 16px; text-align:right; padding-right: 20px; color:white;">
-            @Html.Link("Home","index","home")
-            @Html.Link("Global","index","global")
-            @(User.Identity.IsAuthenticated ? Html.Link("Logoff", "logoff", "logon") : Html.Link("Logon", "index", "logon") )
-        </div>
-    </div>
-    <div style="margin-top: 40px;"></div>        
+    @Html.Partial("_menu") 
     @RenderBody()
 </body>
 </html>
