--- a/src/Squawkings/Views/Shared/_sqauwks.cshtml
+++ b/src/Squawkings/Views/Shared/_sqauwks.cshtml
@@ -5,7 +5,7 @@
     <div class="squawk-item">
         <div class="squawk-item-image">
             <a href="/@item.Username">
-                <img src="../../Content/Images/@item.AvatarUrl" alt="View" />
+                <img class="avatar" src="@Url.Content("~/Content/Images/"+item.AvatarUrl)" alt="View" />
             </a>
         </div>
         <div class="squawk-item-inner">
