Tidy up Profile Page, add 10 limit

--- a/src/Squawkings/Content/Site.less
+++ b/src/Squawkings/Content/Site.less
@@ -191,13 +191,17 @@ textarea{
 		border: (@stdborderwidth*2) @stdbordertype @bkgcolor;
 		padding: @pad-std;
 	}
-
+	#profile-bio {
+		font-style: italic;
+		padding-top: 5px;
+	}
 	#profile-name {
 		font-size: 28px;
 	}
 	#profile-inner {
 		padding: @pad-std @pad-std @pad-std 82px;
 		position: relative;
+
 
 		#profile-inner-left {
 			width: 760px;
@@ -206,13 +210,14 @@ textarea{
 		#profile-inner-buttons {
 			display: inline-block;
 			text-align: right;
-			font-size: 15px;
+			font-size: 14px;
+			font-family: dotum;	
 		}
 		.btn-follower {
 			width: 90px;
 			margin-top: 3px;
-			font-family: Tahoma;
-			font-size: 15px;
+			font-family: dotum;
+			font-size: 14px;
 			font-weight: standard; 
 		}
 	}
