--- a/src/Squawkings/Views/Shared/_sqauwks.cshtml
+++ b/src/Squawkings/Views/Shared/_sqauwks.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<Squawkings.Models.SquawkDisp>
+﻿@using Squawkings
+@model List<Squawkings.Models.SquawkDisp>
 
 @foreach (var item in Model)
 {
@@ -17,7 +18,7 @@
                 @(item.Content)
             </div>
             <div class="squawk-item-time">
-                @(item.Time)
+                @(item.CreatedAt.ToPrettyDate())
             </div>
         </div>
     </div>
