Added Profile Menu and Controller and Footer Total Users and Squawks

--- a/src/Squawkings/Content/Site.less
+++ b/src/Squawkings/Content/Site.less
@@ -264,6 +264,23 @@ hr {
 	border: (@stdborderwidth*2) @stdbordertype @bkgcolor;
     padding: @pad-std;
 }
+
+#footer-banner {
+	width: 100%;
+	text-align: right;
+	display: inline-block; 
+	ul {
+		display: inline-block; 
+		font-weight: bold;
+		list-style-type: none;
+		margin: 0 10px;   
+		margin: 0 10px;   
+		li {
+			display: inline-block; 
+		}
+	}
+}
+
 #logon-banner { 
     height: @bannerheight;
     background:  url("images/header.png") repeat-x;
