--- a/src/Squawkings/Views/Shared/_menu.cshtml
+++ b/src/Squawkings/Views/Shared/_menu.cshtml
@@ -1,9 +1,14 @@
-﻿<div id="logon-banner">
+﻿@model Squawkings.Controllers.MenuViewModel
+<div id="logon-banner">
     <div  class="container">
         <ul>
             @if (User.Identity.IsAuthenticated)
             {
                 <li>
+                    @Html.Link("Profile", "index", Model.UserName)
+                </li>
+
+                                <li>
                     @Html.Link("Home", "index", "home")
                 </li>
             }
