Added File Upload and IsGravatar checkbox

--- a/src/Squawkings/Content/Site.less
+++ b/src/Squawkings/Content/Site.less
@@ -145,14 +145,17 @@ textarea{
 .avatar {
     width: 57px;
     height: 57px;
-    -webkit-box-shadow: 0px 0px @pad-small1 @shadowcolor; 
-    -moz-box-shadow: 0px 0px @pad-small1 @shadowcolor;
 	.rounded-corners;
-    overflow: hidden;
-    position: absolute;
     left: @pad-std;
     top: @pad-std;
+    -webkit-box-shadow: 0px 0px @pad-small1 @shadowcolor; 
+    -moz-box-shadow: 0px 0px @pad-small1 @shadowcolor;
+    overflow: hidden;
+    position: absolute;
+	left: @pad-std;
+    top: @pad-std;
 }
+
 .squawk-item-inner {
     padding: @pad-std @pad-std @pad-std 82px;
 }
