--- a/src/Squawkings/Views/Logon/Index.cshtml
+++ b/src/Squawkings/Views/Logon/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Squawkings.Controllers
 @model Squawkings.Controllers.LogonViewModel
 @{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutLogon.cshtml";
     ViewBag.Title = "Logon.cshtml";
 }
 
