Tidy up all pages, add textarea with helper and validation msg

--- a/src/Squawkings/Content/Site.less
+++ b/src/Squawkings/Content/Site.less
@@ -158,6 +158,7 @@ textarea{
 .squawk-post, .squawks-container  {
     border-radius: @radius;
     -moz-border-radius: @radius;
+	position: relative;
 }
 .squawk-post-top {
     text-align: center;
@@ -166,6 +167,14 @@ textarea{
 .squawk-post-bottom {
     text-align: right;
     padding-right: @pad-std; 
+}
+.squawk-post-textarea{
+	text-align: left;
+}
+.squawk-post-val {
+	text-align: left;
+	margin-left: 20px;
+	width: 600px;
 }
 #post-button, #logoff-button {
     margin: @pad-small1 0 0 0;
