--- a/src/Squawkings/Views/Home/Index.cshtml
+++ b/src/Squawkings/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
 				</div>
 				<div class="squawk-post-bottom">
 					<span class="squawk-post-val">@Html.ValidationMessage(x=>x.Content).AddClass("squawk-post-val")</span>
-					<span>@Html.Submit("Squawk").AddClass("btn btn-primary")</span>
+					<span class="squawk-post-button">@Html.Submit("Squawk").AddClass("btn btn-primary")</span>
 				</div>
             </div>  
          }
